--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Excercise 1</title>
     <meta name="title" content="Excercise 1">
     <meta name="description" content="The description of the page">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <header>
